my full frontend project

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
             </div>
         
         <div class="msg-contanior">
-            <p id="msg">play your move</p>
+            <p id="msg">Play Your Move</p>
         </div>
+        <div>
+        <button>Reset Game </button></div>
         <script src= "app.js"></script>
 </body>
 </html>
